Fix inspector vertrical overflow problems
Set more heights in CSS to stop inspector from growing too large with
many debug entries.

--- a/src/css/webapp.scss
+++ b/src/css/webapp.scss
@@ -14,7 +14,12 @@ body {
   flex-direction: column;
 
   ._battle-viewer-root {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: map_get($spacers, 3) 0;
+
+    max-height: 60%;
   }
 
   ._bar {
@@ -42,7 +47,6 @@ body {
 
     border-top: $border-2;
     height: 100%;
-
 
     textarea {
       // cancel padding so that the textarea background stretches all the way across
@@ -104,6 +108,8 @@ body {
   ._grid-viewer {
     width: 95%;
     display: flex;
+    // keep inspector height from filling entire height of grid-viewer
+    align-items: start;
   }
 
   ._grid-viewer-main {
@@ -132,11 +138,15 @@ body {
     border: $border-2;
     overflow: auto;
 
-    // TODO create manually-adjustable slider
-    max-height: 130px;
+    // fix for inspector vertical overflow
+    max-height: 80%;
 
     ._table {
       line-height: 1;
+    }
+
+    .info {
+      font-size: 1rem;
     }
   }
 
